crates/ohno_macros_impl/tests/snapshots/enrich_err__tests__a_non_function_is_rejected.snap
---
source: crates/ohno_macros/src/enrich_err/mod.rs
expression: "rendered(quote!(\"failed\"), parse_quote!(struct T;))"
---
::core::compile_error! {
    "`#[enrich_err(...)]` applies to functions only"
}
